--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.logindemo">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginDemo">
+        <activity
+            android:name=".DetailsMsgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BoardCallActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FindMessageActivity"
+            android:exported="false" />
+
         <activity
             android:name=".QrPhoneBookActivity"
             android:exported="false" />
@@ -26,9 +40,6 @@
             android:exported="false" />
         <activity
             android:name=".SelectedPhoneBookActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SimPhoneBookActivity"
             android:exported="false" />
         <activity
             android:name=".DiaryPhoneBookActivity"
@@ -79,6 +90,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 </manifest>
